<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WoW-BossEncounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    <color name="coloremop">#357459</color>
    <color name="nero">#000000</color>
    <color name="indaco">#310062</color>
    <color name="oro">#FFd700</color>
    
 <!-- terrazza dell'eterna primavera  -->
        <string name="terrazza">Terrace Of Endless Spring</string>
        <string name="protettori">Protectors Of The Endless</string>
        <string name="tsulong">Tsulong</string>
        <string name="leishi">Lei Shi</string>
        <string name="shapaura">Sha Of Fear</string>
   
    
 <!--   segrete di mogushan -->
=======
    <color name="oro">#FFD700</color>
    <color name="indaco">#310062</color> 

    
      
     <!-- terrazza dell'eterna primavera  -->
    <string name="terrazza">Terrace Of Endless Spring</string>
    <string name="protettori">Protectors Of The Endless</string>
    <string name="tsulong">Tsulong</string>
    <string name="leishi">Lei Shi</string>
    <string name="shapaura">Sha Of Fear</string>
   
    
    <!--   segrete di mogushan -->
>>>>>>> origin/diego
        <string name="mvg">Mogu\'shan Vaults</string>
        <string name="quilen">The Stone Guard</string>
        <string name="feng">Feng The Accursed</string>
        <string name="garajal">Gara\'jal The Spiritbinder Spiriti</string>
        <string name="reggenti">The Spirit Kings</string>
        <string name="elegon">Elegon</string>
        <string name="volonta">Will Of The Emperor</string>
        
        
<<<<<<< HEAD
<!-- cuore della paura -->
=======
        <!-- coure della paura -->
>>>>>>> origin/diego
        <string name="cuore">Heart Of Fear</string>   
    	<string name="visir">Imperial Vizier Zor\'lok</string>
        <string name="signorelame">Blade Lord Ta\'yak</string>
        <string name="garalon">Garalon</string>
        <string name="signorevento">Wind Lord Mel\'jarak</string>
        <string name="plasmatoreambra">Amber Shaper Un\'sok</string>
        <string name="shekzeer">Grand Empress Shek\'zeer </string>
            
<<<<<<< HEAD
<!-- regno del tuono -->
=======
            <!-- regno del tuono -->
>>>>>>> origin/diego
        <string name="regnotuono">Throne Of Thunder</string>
        <string name="ildemolitore">Jin\'rokt The Breaker</string>
        <string name="horridon">Horridon</string>
        <string name="concilioanziani">Council Of Elders</string>
        <string name="tortos">Tortos</string>
        <string name="megaera">Megaera</string>
        <string name="jikun">Ji-Kun</string>
        <string name="durumu">Durumu The Forgotten</string>
        <string name="primordius">Primordius</string>
        <string name="animus">Dark Animus</string>
        <string name="qon">Iron Qon</string>
        <string name="consorti">Twin Consorts</string>
        <string name="leishen">Lei Shen</string>
              
        
        
<<<<<<< HEAD
<!-- assedio di orgrimmar -->
=======
        <!-- assedio di orgrimmar -->
>>>>>>> origin/diego
        <string name="soo">Siege Of Orgrimmar</string>
        <string name="immerseus">Immerseus</string>
        <string name="protettoricaduti">The Fallen Protectors</string>
        <string name="norushen">Norushen</string>
        <string name="shaorgoglio">Sha Of Pride</string>
        <string name="galakras">Galakras</string>
        <string name="mastodonte">Iron Juggernaut</string>
        <string name="shamani">Kor\'kron Dark Shaman</string>
        <string name="nazgrim">General Nazgrim</string>
        <string name="malkorok">Malkorok</string>
        <string name="spoglie">Spoils Of Pandaria</string>
        <string name="thok">Thok The Bloodthirsty </string>
        <string name="ingeniere">Siegecrafter Blackfuse </string>
<<<<<<< HEAD
        <string name="eletti">Paragons of the Klaxxi </string>
        <string name="garrosh">Garrosh Hellscream </string>
        
<!-- sotterranei dell'ala nera  -->
        <string name="sotterranei">Blackwing Descent</string>
        <string name="omnotron">Omnotron Defence System</string>
        <string name="rodimagma">Magmaw</string>
        <string name="atramedes">Atramedes</string>
        <string name="chimaeron">Chimaeron</string>
        <string name="maloriak">Maloriak</string>
        <string name="nefarian">Nefarian\'s End</string>
<!-- trono dei quattro venti  -->
        <string name="trono">Throne of the Four Winds</string>
        <string name="conclave">The Conclave of Wind</string>
        <string name="alakir">Al\'Akir</string>
<!-- bastione del crepuscolo  -->
        <string name="bastione">The Bastion of Twilight</string>
        <string name="halfus">Halfus Wyrmbreaker</string>
        <string name="theralion">Theralion and valiona</string>
        <string name="concilio">Ascend Council</string>
        <string name="chogall">Cho\'gall</string>
<!-- terre del fuoco  -->
        <string name="terre">Firelands</string>
        <string name="beth">Beth\'tilac</string>
        <string name="lord">Lord Rhyolith</string>
        <string name="alysrazor">Alysrazor</string>
        <string name="shannox">Shannox</string>
        <string name="baleroc">Baleroc the Gatekeeper</string>
        <string name="majordomo">Majordomo Staghelm</string>
        <string name="ragnaros">Ragnaros</string>
<!-- anima di drago  -->
        <string name="anima">Dragon Soul</string>
        <string name="morchok">Morchok</string>
        <string name="warlord">Warlord Zon\'ozz</string>
        <string name="yorsahj">Yor\'sahj the Unsleeping</string>
        <string name="hagara">Hagara the Stormbinder</string>
        <string name="ultraxion">Ultraxion</string>
        <string name="warmaster">Warmaster Blackhorn</string>
        <string name="spine">Spine od Deathwing</string>
        <string name="madness">Madness of Deathwing</string>
=======
        <string name="eletti">Paragons Of Klaxxi </string>
        <string name="garrosh">Garrosh Hellscream </string>
                
        
        
        <!-- Altomagio -wod - raid -->
        
        <string name="altomaglio">Highmaul</string>
        <string name="manotagliente">Kargath Bladefist</string>
        <string name="macellaio">The Butcher</string>
        <string name="tectus">Tectus</string>
        <string name="sporafelce">Brackenspore </string>
        <string name="ogron">Ogron Twin</string>
        <string name="koragh">ko\'ragh</string>
        <string name="margok">Imperator Mar\'gok</string>
        
        
         <!-- fonderia dei roccianera -wod raid -->
        
        <string name="fonderia">Blackrock Foundry</string>
        <string name="gruul">Gruul</string>
        <string name="tritaroccia">Oregorger</string>
        <string name="signorebestie">Beastlord Darmac </string>
        <string name="domafiamme">Flamebender Ka\'graz </string>
        <string name="franzok">Hans\'gar and franzok</string>
        <string name="operatore">Operator Thogar</string>
        <string name="altoforno">The Blast Furnace</string>
        <string name="kromog">Kromog</string>
        <string name="dameferro">The Iron Maidens</string>
        <string name="manonera">Blackhand </string>
        
         <!-- wod istanze - auchindoun -->
        
        <string name="auchindoun">Auchindoun</string>
        <string name="vigilante">Vigilant Kaathar</string>
        <string name="nyami">Soulbinder Nyami</string>
        <string name="azzakel">Azzakel</string>
        <string name="terongor">Teron\'gor</string>
        
        <!-- wod istanze - bastioni di roccianera superiori -->
       
        <string name="roccianerasuperiori">Upper Blackrock Spire</string>
        <string name="gorashan">Orebender Gor\'ashan</string>
        <string name="kyriak">Kyriak</string>
        <string name="tharbek">Commander Tharbek</string>
        <string name="signorazaela">Warlord Zaela</string>
        
        <!-- wod istanze - Darsena di Ferro -->
         
        <string name="darsenaferro">Iron Docks</string>
        <string name="tranciacarne">Fleshrender Nok\'gar</string>
        <string name="scagnozzi">Ahri\'ok Dugru</string>
        <string name="oshir">Oshir</string>
        <string name="skulloc">Skulloc</string>
        
        <!-- wod istanze - Miniere dei Magliorosso -->
         
        <string name="magliorosso">Bloodmaul Slag Mines</string>  
        <string name="roltall">Roltall</string>
        <string name="guardianoschiavi">Slave Watcher Crushto</string>
        <string name="gugrokk ">Gug\'rokk</string>
        <string name="magmolatus">Magmolatus</string>
        
        <!-- wod istanze - Necropoli dei Torvaluna -->
                 
        <string name="torvaluna">Shadowmoon Burial Grounds</string>
        <string name="sadana">Sadana Bloodfury</string>
        <string name="fauciossa">Bonemaw</string>
        <string name="nhallish">Nhallish</string>
        <string name="nerzhul">Ner\'zul</string>
        
        
        <!-- wod istanze - Treno Frecciacupa -->
         
        <string name="frecciacupa">Grimrail Depot</string>
        <string name="tovra">Skylord Tovra</string>
        <string name="brillarazziborka">Rocketspark and Borka</string>
        <string name="nitrogg">Nitrogg Thundertower</string>
        
        
         <!-- wod istanze - Verdeterno -->
         
        <string name="verdeterno">The Everbloom</string>
        <string name="protettoriantichi">Ancient Protectors</string>
        <string name="arcimagasol">Archmage Sol </string>
        <string name="Xeritac">Xeri\'tac</string>
        <string name="Yalnu">Yalnu</string>
        <string name="scorzasecca">Witherbark</string>
        
        
        
        <!-- wod istanze - vista dei cieli -->
         
        <string name="vistacieli">Skyreach</string>
        <string name="ranjit">Ranjit</string>
        <string name="araknath">Araknath</string>
        <string name="rukhran">Rukhran</string>
        <string name="saggiaviryx">High Sage Viryx </string>
        
        
>>>>>>> origin/diego
        
</resources>
    