<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nero" >
          
            <ImageView
        android:id="@+id/imagetuono"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/custom_regnodeltuono" />

            <Button
                android:id="@+id/ildemolitore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imagetuono"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_jinrokdemolitore"
         		android:text="@string/ildemolitore"
	 			android:textColor="@color/oro" />

            <Button
                android:id="@+id/horridon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ildemolitore"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_horridon"
         		android:text="@string/horridon"
	 			android:textColor="@color/oro" />

            <Button
                android:id="@+id/concilioanziani"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/horridon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_conciglioanziani"
         		android:text="@string/concilioanziani"
	 			android:textColor="@color/oro" />

            <Button
                android:id="@+id/tortos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/concilioanziani"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_tortos"
         		android:text="@string/tortos"
	 			android:textColor="@color/oro" />

          <Button
                android:id="@+id/megaera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tortos"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_megaera"
         		android:text="@string/megaera"
	 			android:textColor="@color/oro" />
          
          
            <Button
                android:id="@+id/jikun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/megaera"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_jinrokdemolitore"
         		android:text="@string/jikun"
	 			android:textColor="@color/oro" />
          
          <Button
                android:id="@+id/durumu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jikun"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_durumu"
         		android:text="@string/durumu"
	 			android:textColor="@color/oro" />
            
          <Button
                android:id="@+id/primordius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/durumu"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_primordius"
         		android:text="@string/primordius"
	 			android:textColor="@color/oro" />
          
                 <Button
                android:id="@+id/animus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/primordius"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_animus"
         		android:text="@string/animus"
	 			android:textColor="@color/oro" />
                 
                   <Button
                android:id="@+id/qon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animus"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_qontenace"
         		android:text="@string/qon"
	 			android:textColor="@color/oro" />
                 
                <Button
                    android:id="@+id/consorti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/qon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/custom_sfondoboss"
                    android:drawableLeft="@drawable/custom_consortigemelle"
                    android:text="@string/consorti"
                    android:textColor="@color/oro" />
          
                 <Button
                android:id="@+id/leishen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/consorti"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
         		android:background="@drawable/custom_sfondoboss"
         		android:drawableLeft="@drawable/custom_leishen"
         		android:text="@string/leishen"
	 			android:textColor="@color/oro" />
                
                
</RelativeLayout>
