<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_sfondoapp" >
 
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
    
    
    
  <ImageView
        android:id="@+id/imageterre"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/custom_terradelfuoco" />

  <Button
      android:id="@+id/beth"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/imageterre"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_bath"
      android:text="@string/beth"
	  android:textColor="@color/oro" />

  <Button
      android:id="@+id/sire"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/beth"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_sire"
      android:text="@string/lord"
	  android:textColor="@color/oro" />

  <Button
      android:id="@+id/alysrazor"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/sire"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_alysrazor"
      android:text="@string/alysrazor"
	  android:textColor="@color/oro" />

  <Button
      android:id="@+id/shannox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/alysrazor"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_shadellorgoglio"
      android:text="@string/shannox"
	  android:textColor="@color/oro" />

  <Button
      android:id="@+id/galakras"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/shannox"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_shannox"
      android:text="@string/galakras"
	  android:textColor="@color/oro" />

  <Button
      android:id="@+id/baleroc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/galakras"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_baleroc"
      android:text="@string/baleroc"
	  android:textColor="@color/oro" />

  <Button
      android:id="@+id/majordomo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/baleroc"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_maggiordomo"
      android:text="@string/majordomo"
	  android:textColor="@color/oro" />

    <Button
      android:id="@+id/ragnaros"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/majordomo"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="14dp"
      android:background="@drawable/custom_sfondoboss"
      android:drawableLeft="@drawable/custom_ragnaros"
      android:text="@string/ragnaros"
	  android:textColor="@color/oro" />
  
  </LinearLayout>
</ScrollView>
</RelativeLayout>
